# GitlabStats

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  k8s_manifest.yaml  metrics.py  pyproject.toml
.github/workflows/: dockerpublish.yml
