[tool.poetry]
name = "gitlab_stats"
version = "0.1.0"
description = "Scrape statistics from the Gitlab API"
authors = ["Stig Ofstad <stigofstad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
influxdb = "^5.2.3"
flask = "^1.1.1"
python-gitlab = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
